# Wrapper

./: .gitignore  CMakeLists.txt  Profiler.hpp  README.md  Wrapper.hpp
include/: SuffixHandler.hpp  Wrapper.hpp
include/exception/: NotAuthorized.h
include/executionHandler/: ExecutionHandler.hpp  Noop.hpp  Profiler.hpp  README.md  Session.hpp
src/exception/: NotAuthorized.cpp
